Finalizado os testes unitarios e melhorias na aplicaçãp
