# src/controllers/CustomerController.ts
@@ -71,7 +71,7 @@ class CustomerController{
         const customer = await customerService.update({id,name,birth_date,gender,city_id,});
 
 
-        return response.status(204).json(customer)
+        return response.status(202).json(customer)
         }catch(err){
         return response.status(400).json({
             messageError: err.message
@@ -85,7 +85,7 @@ class CustomerController{
         try{
          const customerService = new CustomerService();
          const customer = await customerService.delete(id);
-         return response.status(200).json(customer)
+         return response.status(204).json(customer)
         }catch(err){
         return response.status(400).json({
             messageError: err.message
